# frbscintvelocity

./: README.md  pyproject.toml
acf/: FRB_ScintACF.py
data/: Burstspectra_59611.npz
